Day-3/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-clusterip
spec:
  selector:
    app: day2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
