Day-3/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nodeport
spec:
  type: NodePort
  selector:
    app: day2-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30036
